--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+   <meta name="author" content="Perrett,Recla,Daguro,Calimba,Sumahit,Mendez">
+   <meta name="keywords" content="Milestone 1">
+   <meta name="date-submitted" content="04/24/2025">
   <title>Miming Jump!</title>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
